--- a/src/App.scss
+++ b/src/App.scss
@@ -31,8 +31,8 @@ html {
 
 header {
 	position: relative;
-	height: 520px;
-	min-height: 450px;
+	height: 400px;
+	//min-height: 450px;
 	width: 100%;
 	background-size: cover;
 	-webkit-background-size: cover;
@@ -43,7 +43,7 @@ header {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	padding-top: 150px;
+	padding-top: 0px;
 	padding-bottom: 0;
 }
 
@@ -172,7 +172,6 @@ header h1 {
 
 .polaroid img {
 	display: block;
-	max-width: 200px;
 }
 
 .polaroid span {
